# pasteconnect

./: LICENSE  README.md  setup.cfg
pasteconnect/: __init__.py  pastebinclient.py  reqsession.py
