[metadata]
name = pasteconnect
version = 0.6.0
author = Heartlog
author_email = heartlog@skiff.com
license_file = LICENSE
description = Package to read and upload code/text to pastebin.com.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pastebin, pastebinapi, client, opensource
url = https://github.com/heartlog/pasteconnect
download_url = https://github.com/heartlog/pasteconnect/releases
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
install_requires =
	requests
	beautifulsoup4
packages = find:
python_requires = >=3.7
include_package_data = True